--- a/mos.yml
+++ b/mos.yml
@@ -46,7 +46,10 @@ filesystem:
 #  - ["debug.level", 3]
 
 libs:
+  - origin: https://github.com/mongoose-os-libs/adc  # <-- Add this!
+  - origin: https://github.com/mongoose-os-libs/aws  # <-- Add this!
   - origin: https://github.com/mongoose-os-libs/boards
+  - origin: https://github.com/mongoose-os-libs/core
   - origin: https://github.com/mongoose-os-libs/ca-bundle
   - origin: https://github.com/mongoose-os-libs/rpc-service-config
   - origin: https://github.com/mongoose-os-libs/rpc-service-fs
